@@ -1,0 +1,10 @@
+<body onload="
+    document.open();
+    window.styleMedia.matchMedium();
+    document.write('PASS');
+    document.close();
+  ">
+<script>
+if (window.layoutTestController)
+    layoutTestController.dumpAsText();
+</script>
